fix: Fix footer inconsistencies on mobile.

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -32,9 +32,6 @@
       font-size: x-large;
     }
   }
-  footer {
-    text-align: center;
-  }
 }
 
 // WIDE VIEW
